// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`单测正常: _ellipsis.test.scss 1`] = `
".one-line {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.two-lines {
  overflow: hidden;
  /*! autoprefixer: off */
  /* autoprefixer: off */
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  /* autoprefixer: on */
  /*! autoprefixer: on */
}

.ten-lines {
  overflow: hidden;
  /*! autoprefixer: off */
  /* autoprefixer: off */
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 10;
  /* autoprefixer: on */
  /*! autoprefixer: on */
}"
`;

exports[`单测正常: _maskFeedback.test.scss 1`] = `
".button {
  position: relative;
  user-select: none;
}
.button:active::after, .button.active::after {
  content: \\"\\";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.2);
}
.button.plain {
  position: relative;
  user-select: none;
}
.button.plain:active::after, .button.plain.active::after {
  content: \\"\\";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  background: red;
}"
`;

exports[`单测正常: _opacityFeedback.test.scss 1`] = `
".button {
  user-select: none;
}
.button:active, .button.active {
  opacity: 0.8;
}
.button.plain {
  user-select: none;
}
.button.plain:active, .button.plain.active {
  opacity: 0.1;
}"
`;

exports[`单测正常: _size.test.scss 1`] = `
".square100 {
  width: 100px;
  height: 100px;
}

.w100-h200 {
  width: 100px;
  height: 200px;
}"
`;

exports[`打包正常: bundle.test.scss 1`] = `
".demo {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  position: relative;
  user-select: none;
  user-select: none;
  width: 40px;
  height: 40px;
}
.demo:active::after, .demo.active::after {
  content: \\"\\";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  background: blue;
}
.demo:active, .demo.active {
  opacity: 0.5;
}"
`;
